# operation_systems

./: .clang-format
1_sem/lab1/: CMakeLists.txt
1_sem/lab1/doc/: 210_Коростин_Лаб1.docx
1_sem/lab1/include/: errors.h
1_sem/lab1/src/: child.cpp  errors.cpp  io.cpp  main.cpp
1_sem/lab2/include/: errors.h  utils_lab2.h
1_sem/lab2/src/: input.txt  io.c
1_sem/lab3/: CMakeLists.txt
1_sem/lab3/.cache/clangd/index/: child.cpp.B0C6E8AC93C450A2.idx  io.cpp.00EAD5360D292267.idx  io.hpp.4C76C5083CE6220D.idx
1_sem/lab3/include/: errors.hpp  utils_lab3.hpp
1_sem/lab3/src/: child.cpp  io.cpp  main.cpp
1_sem/lab4/src/: errors.cpp
lab1/: CMakeLists.txt
lab1/.cache/clangd/index/: child.cpp.F5A836160BA4F55E.idx  child.h.C105805C95E08AB8.idx  errors.cpp.287A6A4244A08412.idx  errors.h.4958A670F8D41574.idx  io.cpp.DBA17ED4FC1B57D7.idx  io.h.692D9A57A65BC93E.idx  main.cpp.BCC8ACF94501C7AB.idx
lab1/include/: child.h  errors.h  io.h
lab1/src/: child.cpp  errors.cpp  io.cpp  main.cpp  output
lab2/: CMakeLists.txt
lab2/.cache/clangd/index/: errors.c.9B209AFCD927486F.idx  errors.h.4AEA22494F8843DE.idx  io.c.02D9CD6F34CAFAF2.idx  io.h.B28E974DE5F7ACE8.idx  main.c.2D8A5A84A9AFABA5.idx  utils_lab2.c.B7C6ADBBEFC04EC0.idx  utils_lab2.h.80160A02ED9559A8.idx
lab2/doc/: 210_Коростин_Лаб1.docx
lab2/include/: io.h  utils_lab2.h
lab2/src/: errors.c  input2  main.c  utils_lab2.c
lab3/: CMakeLists.txt
lab3/.cache/clangd/index/: errors.cpp.26D39A222C9CE1FF.idx  errors.hpp.B0C764EB81BE25C4.idx  main.cpp.C9A29D9E627F6D19.idx  utils_lab3.cpp.03A997AAD77E526D.idx  utils_lab3.hpp.DF9EE6FF70DC6EF3.idx
lab3/include/: errors.hpp  utils_lab3.hpp
lab3/src/: errors.cpp  main.cpp  utils_lab3.cpp
lab4/: CMakeLists.txt
lab4/.cache/clangd/index/: errors.cpp.89406AE593C9D773.idx  io.cpp.70FFECB75F77D718.idx  io.hpp.07902151B12B2E90.idx  main.cpp.23F501EA7ED36F90.idx
lab4/doc/: 210_Коростин_Лаб4.docx
lab4/include/: errors.hpp
lab4/lib_buddy_allocator/: buddy_allocator.cpp  buddy_allocator.h
lab4/lib_power_two_allocator/: 2n_allocator.cpp  2n_allocator.h  power_two_allocator.cpp
lab4/src/: errors.cpp  main.cpp
(+31 files in other folders)
